--- a/templates/component/map.twig
+++ b/templates/component/map.twig
@@ -1,6 +1,9 @@
 {% embed "@hdbt/misc/component.twig" with
   {
-    component_classes: [ 'component--map', 'component--full-width' ],
+    component_classes: [
+      'component--map',
+      'component--full-width'
+    ],
     component_title: title,
     component_description: description,
     component_content_class: 'map',
