UHF-9152: UHF-9152: update selection wrapper and form container styles.

--- a/src/scss/06_components/forms/_react-forms.scss
+++ b/src/scss/06_components/forms/_react-forms.scss
@@ -142,6 +142,9 @@ button.hdbt-search__remove-selection-button:not(:disabled) {
   padding-top: 0;
 }
 
+.hdbt-search__selections-wrapper {
+  margin-bottom: $spacing-double;
+}
 // Negate HDS-defined margin for icon inside remove button
 .hdbt-search__selections-wrapper button.hdbt-search__remove-selection-button > div {
   margin-right: 0;
