--- a/src/scss/06_components/paragraphs/_unit-search.scss
+++ b/src/scss/06_components/paragraphs/_unit-search.scss
@@ -3,6 +3,10 @@
   background-color: $color-silver-light;
 }
 
+.component--unit-search .hds-checkbox__input {
+  z-index: 1; // make sure that the checkbox is above the following label to show focus-ring properly
+}
+
 // Patch Siteimprove false positive color contrast issue to reduce noise
 .component--unit-search .hds-checkbox__label {
   background-color: $color-silver-light;
