UHF-9389: Fixing issue with errand-services on desktop layout, moving main-image styles to a separate style file

--- a/src/scss/06_components/pages/_errand-service.scss
+++ b/src/scss/06_components/pages/_errand-service.scss
@@ -1,5 +1,6 @@
 .errand-service {
   margin-top: $spacing-triple;
+  max-width: $content-width-max;
 
   @include breakpoint($breakpoint-l) {
     margin-top: $spacing-quadruple;
