UHF-9249: Check if description override has render output.

--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -65,7 +65,7 @@
   {% endif %}
   {# End of Main image #}
 
-  {% if (content.description|render or content.description_override) and hide_description == false %}
+  {% if (content.description|render or content.description_override|render) and hide_description == false %}
     <div class="long-desc user-edited-content">
       {% if content.description_override|render %}
         {{ content.description_override }}
