UHF-9269: Added an anchor link to the service map on the tpr unit page.

--- a/templates/module/helfi_tpr/tpr-unit-contact-information.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit-contact-information.html.twig
@@ -28,6 +28,10 @@
         {% if content.accessibility_sentences|render %}
           {% include '@hdbt/misc/accessibility-link.twig' %}
         {% endif %}
+        <br />
+        {% if content.service_map_embed|render %}
+          {% include '@hdbt/misc/location-link.twig' %}
+        {% endif %}
       </div>
     {% endif %}
     {% if unit_email_link and content.email|render %}
