UHF-9269: Make links go on own row with a better solution.

--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -35,6 +35,10 @@
     }
   }
 
+  .unit__contact-row--address a {
+    display: block;
+  }
+
   .unit__contact-row--email a {
     word-break: break-all;
   }
