UHF-9064: UHF-9064: finetune styles and translations.

--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -26,7 +26,11 @@
 }
 
 .hdbt-search--react__form-description {
-  margin-bottom: $spacing;
+  margin-bottom: $spacing-and-half;
+}
+
+.hdbt-search--react__text-field {
+  margin-bottom: $spacing-double;
 }
 
 // Override some fieldset default styles here
