UHF-9202: Fix padding for without sidebar

--- a/src/scss/06_components/paragraphs/_react-search.scss
+++ b/src/scss/06_components/paragraphs/_react-search.scss
@@ -103,7 +103,7 @@ fieldset .hdbt-search--react__checkbox:not(:first-of-type) {
   background-color: $color-silver-light;
 }
 
-.has-sidebar .components--upper .component--hdbt-search--react .component__container {
+.components--upper .component--hdbt-search--react .component__container {
   margin-left: $spacing;
   margin-right: $spacing;  
   padding: $spacing-and-half;
