UHF-9064: UHF-9064: add missing paragraph class.

--- a/templates/paragraphs/paragraph--health-station-search.html.twig
+++ b/templates/paragraphs/paragraph--health-station-search.html.twig
@@ -2,6 +2,7 @@
   {% embed "@hdbt/misc/component.twig" with
     {
       component_classes: [
+        'component--full-width',
         'component--react-search',
         'component--react-search--health-stations'
       ],
