--- a/templates/module/helfi_tpr/tpr-unit.html.twig
+++ b/templates/module/helfi_tpr/tpr-unit.html.twig
@@ -11,6 +11,7 @@
 {% set has_ontologyword_details = content.field_ontologyword_details|render ? true : false %}
 {% set has_subgroup = content.subgroup|render ? true : false %}
 {% set has_other_info = content.highlights|render or content.topical|render or content.other_info|render or content.links|render ?: false %}
+{% set show_description = (content.description.0['#text'] or content.enrich_description.0['#text']) and hide_description == false ?: false %}
 
 {% set supports_swedish %}
   {% if 'sv' in provided_languages %}
@@ -65,9 +66,9 @@
   {% endif %}
   {# End of Main image #}
 
-  {% if (content.description|render or content.enrich_description|render) and hide_description == false %}
+  {% if show_description %}
     <div class="long-desc user-edited-content">
-      {% if content.description|render %}
+      {% if content.description.0['#text'] %}
         {{ content.description }}
       {% else %}
         {{ content.enrich_description }}
